[Feature] 3028 調整彈窗文案

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -921,7 +921,7 @@
     <string name="identity_marital_status">Civil Status</string>
     <string name="identity_sex">Sex</string>
     <string name="identity_work">Occupation</string>
-    <string name="message_source_change">The system receives the latest event data and will automatically return to the homepage immediately</string>
+    <string name="message_source_change">The system receives new data, click confirm button to refresh</string>
     <string name="appearance">Appearance</string>
     <string name="goal_buster">GOAL BUSTER</string>
     <string name="top_games">TOP GAMES</string>
