--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1143,7 +1143,7 @@
     <string name="dialog_age_verify_exit">EXIT</string>
     <!--endregion-->
 
-    <string name="coming_soon">Coming Soon</string>
+    <string name="coming_soon">Soon</string>
     <string name="esports">eSports</string>
 
     <!--region 注單模塊調整-->
