--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1139,6 +1139,6 @@
     <!--endregion-->
 
     <string name="esports">电子竞技</string>
-    <string name="coming_soon">即将推出</string>
+    <string name="coming_soon">即将</string>
 
 </resources>
