1.棒球、電競的coming soon 調整

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1143,7 +1143,7 @@
     <!--endregion-->
 
     <string name="esports">电子竞技</string>
-    <string name="coming_soon">即将</string>
+    <string name="coming_soon">即将推出</string>
 
     <!--region 注單模塊調整-->
     <string name="bet_info_bet_lock_hint">注单盘口已关闭</string>
