--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -488,7 +488,7 @@
     <string name="hint_pay1">1. The payment will be automatically received after successful payment, and the prompt will pop up.</string>
     <string name="hint_pay2">2. If there is no response for a long time, please contact customer service.</string>
     <string name="btn_look_for">Check trade</string>
-    <string name="btn_service">Contact customer service</string>
+    <string name="btn_service">Customer service</string>
     <string name="btn_service_maintain">Customer service</string>
     <string name="txv_transfer_pay">Transfer</string>
     <string name="txv_online_pay">Online Deposit</string>
