晚上个人中心

--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1174,5 +1174,6 @@
 
     <string name="coming_soon">Sắp có</string>
     <string name="esports">eSports</string>
+    <string name="timezone_change">Múi giờ</string>
 
 </resources>
