--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1142,5 +1142,6 @@
 
     <string name="coming_soon">Coming Soon</string>
     <string name="esports">eSports</string>
+    <string name="timezone_change">Time Zone</string>
 
 </resources>
