--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1144,6 +1144,7 @@
     <!--region coming soon-->
     <string name="esports">eSports</string>
     <string name="coming_soon">Coming Soon</string>
+    <string name="timezone_change">Time Zone</string>
     <!--endregion-->
 
 </resources>
