--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1143,4 +1143,7 @@
     <string name="coming_soon">Coming Soon</string>
     <string name="esports">eSports</string>
 
+    <!--region 大廳賠率按鈕-->
+    <string name="none">None</string>
+    <!--endregion-->
 </resources>
