--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1141,4 +1141,7 @@
     <string name="esports">电子竞技</string>
     <string name="coming_soon">即将推出</string>
 
+    <!--region 大廳賠率按鈕-->
+    <string name="none">无</string>
+    <!--endregion-->
 </resources>
