[Add] 補上文字檔

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1146,4 +1146,7 @@
     <string name="coming_soon">Coming Soon</string>
     <!--endregion-->
 
+    <!--region 大廳賠率按鈕-->
+    <string name="none">None</string>
+    <!--endregion-->
 </resources>
