增加时区选择，修改左右侧边栏

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1146,7 +1146,7 @@
     <string name="coming_soon">Soon</string>
     <string name="esports">eSports</string>
     <string name="timezone_change">Time Zone</string>
-
+    <string name="timezone">Time Zone</string>
     <!--region 注單模塊調整-->
     <string name="bet_info_bet_lock_hint">Markets of your bet has changed</string>
     <string name="bet_info_no_parlay_hint">The match hasn\'t supported parlay</string>
