--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1178,7 +1178,7 @@
     <string name="coming_soon">Sắp có</string>
     <string name="esports">eSports</string>
     <string name="timezone_change">Múi giờ</string>
-
+    <string name="timezone">Múi giờ</string>
     <!--region 注單模塊調整-->
     <string name="bet_info_bet_lock_hint">Kèo chấp đã đóng</string>
     <string name="bet_info_no_parlay_hint">Trận đấu không hỗ trợ đá xiên.</string>
