--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1145,6 +1145,7 @@
     <string name="esports">电子竞技</string>
     <string name="coming_soon">即将推出</string>
     <string name="timezone_change">时区切换</string>
+    <string name="timezone">时区</string>
 
     <!--region 注單模塊調整-->
     <string name="bet_info_bet_lock_hint">注单盘口已关闭</string>
