--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1150,6 +1150,11 @@
     <!--region 注單模塊調整-->
     <string name="bet_info_bet_lock_hint">Markets of your bet has changed</string>
     <string name="bet_info_no_parlay_hint">The match hasn\'t supported parlay</string>
+    <string name="function">Functions</string>
+    <string name="sport_relative">Sports Related</string>
+    <string name="setting">Settings</string>
+    <string name="service">Service</string>
+    <string name="timezone_list_no_record">No result found</string>
     <!--endregion-->
 
 </resources>
