[Fix] 25768 【Android】個人頁面最下方 我的按鈕越南文 文案顯示跟原型不一樣

--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -746,7 +746,7 @@
     <string name="bottom_nav_game">Sự kiện</string>
     <string name="bottom_nav_promotion">Khuyến mãi</string>
     <string name="bottom_nav_chat">trò truyện</string>
-    <string name="bottom_nav_my_account">của tôi</string>
+    <string name="bottom_nav_my_account">Của tôi</string>
     <string name="sport">Thể thao</string>
     <string name="live">Live</string>
     <string name="lottery_description">Có hơn trăm cách chơi xổ số để bạn trúng thưởng! Chúng tôi cung cấp cho người chơi nhiều nội dung trò chơi phong phú khác nhau, \ n cam kết tạo ra một môi trường trò chơi giải trí chất lượng cao, mang lại kết quả công bằng và mở thưởng công khai minh bạch nhất</string>
