--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -639,7 +639,7 @@
     <string name="bet_info_in_play_score">%s (%2$s-%3$s)</string>
     <string name="bet_info_system_close_incompatible_item">Game play you selected can not apply to game play of parlay rules, will automatically be cancelled by system\',</string>
     <string name="bet_info_list_clean">Clear all</string>
-    <string name="bet_info_bet_balance_insufficient">not enough balance</string>
+    <string name="bet_info_bet_balance_insufficient">Not enough balance</string>
     <string name="bet_info_different_game_type">Different ball species can not be linked for parlay</string>
     <string name="bet_info_input_quota">Enter Stake</string>
     <string name="bet_info_check_maximum_limit">MAX BET</string>
