[Fix] 1. 避免部分手機可以保存本地資料 2. amountError 加上防呆 3. 更新文檔

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -366,7 +366,7 @@
     <string name="lose_half">输半</string>
     <string name="draw">和</string>
     <string name="canceled">已取消</string>
-    <string name="odds_change">賠率已改變</string>
+    <string name="odds_change">赔率已改变</string>
     <string name="pending">待成立 %1$s 秒</string>
     <string name="bet_canceled">下注失败</string>
     <string name="confirmed">已确认</string>
