--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1213,7 +1213,7 @@
     <string name="sport_relative">Sports Related</string>
     <string name="setting">Settings</string>
     <string name="service">Service</string>
-    <string name="timezone_list_no_record">No result found</string>
+    <string name="hint_enter_city">Please enter city</string>
 
     <!--region 大廳賠率按鈕-->
     <string name="none">None</string>
