--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -104,6 +104,11 @@
     <string name="security_pb">Câu hỏi an toàn</string>
     <string name="hint_security_pb">(Vui lòng nhập quốc gia yêu thích)</string>
     <string name="real_name">Họ tên thật</string>
+    <string name="income_source">Source of income</string>
+    <string name="betting_shop">Betting Shop</string>
+    <string name="register_identity">ID</string>
+    <string name="hint_register_identity">Please enter ID Number</string>
+    <string name="birth_date">Birth Date</string>
     <string name="hint_real_name">(Họ tên phải đồng nhất với tài khoản ngân hàng)</string>
     <string name="verification_code">Mã xác nhận</string>
     <string name="verification_code_by_sms">Mã xác nhận SMS</string>
