[新增] 註冊生日日期選擇器

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1169,4 +1169,6 @@
     <!--region 大廳賠率按鈕-->
     <string name="none">None</string>
     <!--endregion-->
+
+    <string name="hint_default_birth">yyyy / mm / dd</string>
 </resources>
