--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -108,7 +108,7 @@
     <string name="income_source">薪资来源</string>
     <string name="betting_shop">匹配投注站</string>
     <string name="register_identity">身分证号</string>
-    <string name="hint_register_identity">請輸入身分证号</string>
+    <string name="hint_register_identity">(请输入身分证号)</string>
     <string name="birth_date">生日</string>
     <string name="hint_real_name">(姓名须与银行户口一致)</string>
     <string name="verification_code">验证码</string>
