--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,7 +108,7 @@
     <string name="income_source">Source of income</string>
     <string name="betting_shop">Betting Shop</string>
     <string name="register_identity">ID</string>
-    <string name="hint_register_identity">Please enter ID Number</string>
+    <string name="hint_register_identity">(Please enter ID Number)</string>
     <string name="birth_date">Birth Date</string>
     <string name="hint_real_name">(match the bank account name)</string>
     <string name="verification_code">Verification code</string>
