--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -110,6 +110,7 @@
     <string name="register_identity">身分证号</string>
     <string name="hint_register_identity">(请输入身分证号)</string>
     <string name="birth_date">生日</string>
+    <string name="hint_birth_date">(YYYY/MM/DD)</string>
     <string name="hint_real_name">(姓名须与银行户口一致)</string>
     <string name="verification_code">验证码</string>
     <string name="verification_code_by_sms">短信验证码</string>
