--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -106,6 +106,7 @@
     <string name="hint_security_pb">(请输入最爱的国家)</string>
     <string name="real_name">真实姓名</string>
     <string name="income_source">薪资来源</string>
+    <string name="identity_type">证件类型</string>
     <string name="betting_shop">匹配投注站</string>
     <string name="register_identity">身分证号</string>
     <string name="hint_register_identity">(请输入身分证号)</string>
