[feature] 加入E-Games

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1162,4 +1162,5 @@
     <string name="timezone_list_no_record">No result found</string>
     <!--endregion-->
 
+    <string name="e_games">E-Games</string>
 </resources>
