--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1194,4 +1194,5 @@
     <string name="timezone_list_no_record">Không có kết quả nào</string>
     <!--endregion-->
 
+    <string name="e_games">E-Games</string>
 </resources>
