--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1160,4 +1160,6 @@
     <string name="service">服务</string>
     <string name="timezone_list_no_record">搜寻结果为空</string>
     <!--endregion-->
+
+    <string name="e_games">E-Games</string>
 </resources>
