[Fix] OkBet strings

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1143,7 +1143,7 @@
 
     <!--region 確認年齡彈窗-->
     <string name="dialog_age_verify_statement">
-        OKBet 致力于为所有客户提供安全、舒适的游戏体验。
+        OkBet 致力于为所有客户提供安全、舒适的游戏体验。
         \n\n对于绝大多数人来说，游戏是一项令人愉快的休闲活动。但是，我们意识到有时候游戏对某些客户来说不再有趣。
         \n\n我们强烈建议您在继续之前花一些时间阅读我们的博彩责任和声明。并且，严禁 21 岁及以下的用户使用。
         \n\n我们的责任是帮助我们的客户安全、负责任地赌博，降低伤害风险，并帮助需要治疗的人得到治疗。
