--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1144,7 +1144,7 @@
 
     <!--region 確認年齡彈窗-->
     <string name="dialog_age_verify_statement">
-        OKBet is committed to providing a safe, comfortable gaming experience for all our customers.
+        OkBet is committed to providing a safe, comfortable gaming experience for all our customers.
         \n\nFor the vast majority of people, gaming is an enjoyable leisure activity. However, we recognize that there are times when gaming ceases being fun for some customers.
         \n\nWe strongly encourage you to take some time to read our RESPONSIBLE GAMING infographic and statement before you proceed. Users aged 21 and below are strictly not allowed.
         \n\nOur responsibility is to help our customers gamble safely and responsibly, reduce the risk of harm, and help people who need treatment get it.
