--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1214,4 +1214,10 @@
     <string name="service">服务</string>
     <string name="timezone_list_no_record">搜寻结果为空</string>
     <!--endregion-->
+
+    <string name="verification_status">身份证验证</string>
+    <string name="register_identity_photo_front">上传身分证正面</string>
+    <string name="register_identity_photo_hint_front">请点击上传身分证正面照</string>
+    <string name="register_identity_photo_back">上传身分证背面</string>
+    <string name="register_identity_photo_hint_back">请点击上传身分证背面照</string>
 </resources>
