--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1216,4 +1216,10 @@
     <!--region 大廳賠率按鈕-->
     <string name="none">None</string>
     <!--endregion-->
+
+    <string name="verification_status">Verification Status</string>
+    <string name="register_identity_photo_front">Upload Valid ID of the front</string>
+    <string name="register_identity_photo_hint_front">Click to add an image of the front of Valid ID.</string>
+    <string name="register_identity_photo_back">Upload Valid ID of the back</string>
+    <string name="register_identity_photo_hint_back">Click to add an image of the back of  Valid ID.</string>
 </resources>
