--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -39,9 +39,9 @@
     <string name="desc_forget_password">Please contact customer service</string>
     <string name="sign_up_know">Sign up now</string>
     <string name="recommend_code">Invite Code</string>
-    <string name="hint_recommend_code">(Invite Code)</string>
+    <string name="hint_recommend_code">(Please enter your invite code)</string>
     <string name="error_recommend_code">Invite code not available</string>
-    <string name="member_account">Account</string>
+    <string name="member_account">Username</string>
     <string name="member_account_in_profile">Username</string>
     <string name="hint_member_account"><![CDATA[(4-16 characters (English & numbers))]]></string>
     <string name="error_member_account">Username must be 4–16 characters and contain letter and numbers</string>
