[Fix] 26192 【Android】[信用盤] 英越語系下，額度轉換紀錄頁面，轉換平台欄位中顯示平台名稱未完整顯示

--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -730,7 +730,7 @@
     <string name="transfer_money">số tiền chuyển đổi</string>
     <string name="transfer_money_minimum">hạn mức 1.000 trở lên</string>
     <string name="confirm_transform">xác nhận chuyển đổi</string>
-    <string name="plat_money">Số dư ở sàn</string>
+    <string name="plat_money">Số dư kênh</string>
     <string name="money">Số tiền</string>
     <string name="transfer_platform">Kênh chuyển đổi</string>
     <string name="transfer_money_succeed">Số tiền chuyển đổi thành công</string>
