--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -11,6 +11,7 @@
     <string name="message_network_no_connect">请检查网络连接，然后重试。</string>
     <string name="message_network_timeout">网络连接超时。 请再试一次。</string>
     <string name="error">错误</string>
+    <string name="error_input_amount">您输入的金额格式或数值错误</string>
     <string name="error_input_empty">此栏位为必填栏位</string>
     <string name="error_input_empty_new">此栏位为必填栏位</string>
     <string name="error_incompatible_format">您输入的字元不符</string>
