--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -11,6 +11,7 @@
     <string name="message_network_no_connect">The connection has timed out, please try again.</string>
     <string name="message_network_timeout">The connection has timed out, please try again.</string>
     <string name="error">Error</string>
+    <string name="error_input_amount">The amount format or value you entered is incorrect</string>
     <string name="error_input_empty">This field is required</string>
     <string name="error_input_empty_new">This field is required.</string>
     <string name="error_incompatible_format">The name that you entered is not valid</string>
