[Fix] 26203 【Android】[信用盤] 越語系下，我的頁面中「其他投注紀錄」選項越南翻譯與H5不一致

--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -760,7 +760,7 @@
     <string name="lottery_description">Có hơn trăm cách chơi xổ số để bạn trúng thưởng! Chúng tôi cung cấp cho người chơi nhiều nội dung trò chơi phong phú khác nhau, \ n cam kết tạo ra một môi trường trò chơi giải trí chất lượng cao, mang lại kết quả công bằng và mở thưởng công khai minh bạch nhất</string>
     <string name="sport_bet_record">lịch sử đặt cược thể thao</string>
     <string name="my_favorite">Ưu thích</string>
-    <string name="other_bet_record">lịch sử đặt cược khác</string>
+    <string name="other_bet_record">Các lịch sử cá cược khác</string>
     <string name="credit_bet_record">Lịch sử chu kỳ</string>
     <string name="all_plat_type">Tất cả các loại nền tảng</string>
     <string name="visit_first">Khám phá trò chơi</string>
