--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -382,7 +382,7 @@
     <string name="confirmed">Dã xác nhận</string>
     <string name="bet_detail">Chi tiết đơn cược</string>
     <string name="bet_time">Thời gian đặt cược</string>
-    <string name="bet_time2">Thời gian đặt cược</string>
+    <string name="bet_time2">Thời gian cá cược</string>
     <string name="league_name">Tên giải đấu</string>
     <string name="game_match">Trận đấu</string>
     <string name="play_type">Cách đặt cược</string>
@@ -764,9 +764,9 @@
     <string name="credit_bet_record">Lịch sử chu kỳ</string>
     <string name="all_plat_type">Tất cả các loại nền tảng</string>
     <string name="visit_first">Khám phá trò chơi</string>
-    <string name="bet_number">Số lượt đặt cược</string>
+    <string name="bet_number">Số lần cược</string>
     <string name="bet_money">Số tiền đặt cược</string>
-    <string name="profit_and_loss">Lãi và lỗ</string>
+    <string name="profit_and_loss">Lãi lỗ</string>
     <string name="total_bet_number">Tổng số bàn：</string>
     <string name="total_profit_and_loss">Tổng lãi và lỗ：</string>
     <string name="game_name">Tên trò chơi</string>
