--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -709,7 +709,7 @@
     <string name="log_detail_handle_fee">手续费用：</string>
     <string name="log_detail_rebate_money">返利金额：</string>
     <string name="log_detail_review_time">审核时间：</string>
-    <string name="log_detail_reason">备注：</string>
+    <string name="log_detail_reason">&#12288;&#12288;备注：</string>
     <string name="finance_log_selector_until">到</string>
     <string name="finance_list_no_record">暂无任何内容</string>
     <string name="feedback_detail">反馈详情</string>
@@ -1225,4 +1225,14 @@
     <string name="register_identity_photo_hint_front">请点击上传身分证正面照</string>
     <string name="register_identity_photo_back">上传身分证背面</string>
     <string name="register_identity_photo_hint_back">请点击上传身分证背面照</string>
+    <string name="redenvelope_trantype_send">发红包</string>
+    <string name="redenvelope_trantype_received">收红包</string>
+    <string name="tran_order_no">交易单号</string>
+    <string name="tran_time">交易时间</string>
+    <string name="redenvelope_amount">红包金额</string>
+    <string name="tran_type">交易类型</string>
+    <string name="redenvelope_record">红包纪录</string>
+    <string name="tran_time_sub">交易时间：</string>
+    <string name="redenvelope_amount_sub">红包金额：</string>
+    <string name="tran_type_sub">交易类型：</string>
 </resources>
