--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1219,7 +1219,7 @@
     <string name="redenvelope_trantype_received">Nhận phong bì đỏ</string>
     <string name="tran_order_no">Số giao dịch</string>
     <string name="tran_time">Giờ giao dịch</string>
-    <string name="redenvelope_amount">Số tiền nhận thực tế</string>
+    <string name="redenvelope_amount">Số tiền</string>
     <string name="tran_type">Loại giao dịch</string>
     <string name="redenvelope_record">lịch Sử  Tiền lì xì</string>
     <string name="tran_time_sub">Giờ giao dịch :</string>
