--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1225,4 +1225,5 @@
     <string name="tran_time_sub">Giờ giao dịch :</string>
     <string name="redenvelope_amount_sub">Số tiền nhận thực tế：</string>
     <string name="tran_type_sub">Loại giao dịch：</string>
+    <string name="btn_sure">Xác nhận</string>
 </resources>
